--- a/css/markerCluster.default.css
+++ b/css/markerCluster.default.css
@@ -1,5 +1,5 @@
 .marker-cluster {
-	background-color: rgba(253, 156, 115, 0.6);
+	background-color: rgba(114, 176, 115, 0.6);
 	}
 .marker-cluster div {
 	background-color: rgba(241, 128, 23, 0.6);
